--- a/ex24/Makefile
+++ b/ex24/Makefile
@@ -1,11 +1,21 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: fconde-p <fconde-p@student.42sp.org.b      +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2025/07/20 19:20:11 by fconde-p          #+#    #+#              #
+#    Updated: 2025/07/20 19:20:17 by fconde-p         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 #nome
 NAME = libft.a
 #dir src
 DIR_SRC = srcs
 #dir h
 DIR_H = includes
-#file names
-C_FILES = main.c ft_putstr.c ft_strcmp.c ft_strlen.c ft_swap.c
 
 SRCS = $(wildcard $(DIR_SRC)/*.c)
 OBJ = $(SRCS:.c=.o)
@@ -23,7 +33,6 @@ $(NAME): $(OBJ)
 	ar rcs $@ $^
 
 # gera arquivos .o
-# gen_obj:
 %.o: %.c
 	$(CC) $(CFLAGS) -I$(DIR_H) -c $(<) -o $(@)
 
@@ -34,10 +43,3 @@ fclean: clean
 	rm -f libft.a
 
 re: fclean all
-
-
-# find font files from dir "srcs"
-# find header files from dir "includes"
-# find libft.a from root
-# do 'clean', 'fclean', 're' and 'all'
-# functions 'ft_putchar', 'ft_putstr', 'ft_strcmp', 'ft_strlen' e 'ft_swap'
